--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,6 @@ version: '3'
 services:  
   elasticsearch:
     image: 'elasticsearch:5'
-    command: [ elasticsearch, -E, network.host=0.0.0.0, -E, discovery.zen.ping.unicast.hosts=elasticsearch, -E, discovery.zen.minimum_master_nodes=1 ]volumes:
-      - home/docker/elasticsearch/data:/usr/share/elasticsearch/data
-    deploy:
-      mode: 'global'
-      placement:
-        constraints: [node.labels.db_role == elasticsearch]
+    ports:
+      - '9200:9200'
+      - '9300:9300'
