--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,39 @@
 version: '3'  
-services:  
-  elasticsearch:
-    image: 'elasticsearch:5'
-    command: [ elasticsearch, -E, network.host=0.0.0.0, -E, discovery.zen.ping.unicast.hosts=elasticsearch, -E, discovery.zen.minimum_master_nodes=1 ]    
-    volumes:
-      - /elasticsearch/data:/usr/share/elasticsearch/data
+services:
+  master:
+    image: itzg/elasticsearch
+    environment:
+      TYPE: MASTER
+      UNICAST_HOSTS: master
+      MIN_MASTERS: 1
     deploy:
-      mode: 'global'
-      placement:
-        constraints: [node.labels.db_role == elasticsearch]
-
-  nginx:
-    image: 'nginx:1'
+      replicas: 1
+      update_config:
+        parallelism: 1
+  data:
+    image: itzg/elasticsearch
+    environment:
+      TYPE: DATA
+      UNICAST_HOSTS: master
+        ES_JAVA_OPTS:"-Xms4g -Xmx4g"
+    deploy:
+      replicas: 2
+      update_config:
+        parallelism: 1
+        delay: 60s
+        placement:
+            constraints: [node.labels.db == elasticsearch]
+  gateway:
+    image: itzg/elasticsearch
     ports:
-        - '9200:9200'
-    command: |
-      /bin/bash -c "echo '
-      server {
-        listen 9200;
-        add_header X-Frame-Options "SAMEORIGIN";
-        location / {
-            proxy_pass http://elasticsearch:9200;
-            proxy_http_version 1.1;
-            proxy_set_header Connection keep-alive;
-            proxy_set_header Upgrade $$http_upgrade;
-            proxy_set_header Host $$host;
-            proxy_set_header X-Real-IP $$remote_addr;
-            proxy_cache_bypass $$http_upgrade;
-        }
-      }' | tee /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      TYPE: GATEWAY
+      UNICAST_HOSTS: master
+  kibana:
+    image: kibana
+    ports:
+      - "5601:5601"
+    environment:
+      ELASTICSEARCH_URL: http://gateway:9200
